--- a/resume.html
+++ b/resume.html
@@ -18,21 +18,21 @@
             <p class="heading">Contact</p>
             <p class="p1">
                 <span class="span1"><img src="location.png" alt=""/></span>
-                <span>Adress</span><br />123, XYZ Street, ABC
+                <span>Adress</span><br />VIT Vellore TamilNadu,India
             </p>
             <p class="p1">
-                <a class="p1" href="tel:+919898989898"
+                <a class="p1" href="tel:+917681961814"
                 ><span class="span1"><img src="call.png" alt="" /></span>
-                <span>Phone</span><br />9898989898</a>
+                <span>Phone</span><br />7681961814</a>
             </p>
             <p class="p1">
-                <a class="p1" href="mailto:pranjal.pal@programmer.net"
+                <a class="p1" href="mailto:palanimations06@gmail.com"
                 ><span class="span1"><img src="mail.png" alt=""/></span>
-                <span>Mail Adress</span><br />pranjal.pal@programmer.net</a>
+                <span>Mail Adress</span><br />palanimations06@gmail.com</a>
             </p>
             <p class="p1">
                 <span class="span1"><img src="global.png" alt="" /></span>
-                <span>Website</span><br />pranjalpal2006.linkedin.in
+                <span>Website</span><br />https://linkedin.com/in/pranjalpal2006
             </p>
         </div>
         <div class="info">
@@ -52,13 +52,13 @@
             <img src="pencil.png" alt="">
             <p class="p2">Work Experience</p>
         </div>
-        <p class="p4">Junior Core Design <span class="p5">(Feb 2024-Jan 2025)</span></p>
-        <p class="p3">In Design domain you have to make poster and invitations for the club's events and workshops and Club Registration.</p>
+        <p class="p4">Junior Core Tech at ADG <span class="p5">(Feb 2024-Jan 2025)</span></p>
+        <p class="p3">In tech domain we all work on different websites and projects for the club's events and workshops and Club Registration.</p>
         <p class="p4">Software Developer Intern at Pinnacel Labs<span class="p5">(June 2024-Aug 2024)</span></p>
-        <p class="p3">I learned about API integration.</p>
-        <p class="p4">Junior Core Design <span class="p5">(Feb 2024-Jan 2024)</span></p>
-        <p class="p3">In Design domain you have to make poster and invitations for the club's events and workshops and Club Registration.</p>
-        <p class="p4">Junior Core Design <span class="p5">(Feb 2024-Jan 2025)</span></p>
+        <p class="p3">I learned about things like own API generation and integration.</p>
+        <p class="p4">Junior Core Tech IET <span class="p5">(Feb 2024-Jan 2025)</span></p>
+        <p class="p3">In tech domain we all work on different websites and projects for the club's events and workshops and Club Registration.</p>
+        <p class="p4">Junior Core Design IET <span class="p5">(Feb 2024-Jan 2025)</span></p>
         <p class="p3">In Design domain you have to make poster and invitations for the club's events and workshops and Club Registration.</p>
         <div class="clearfix"></div>
         <br><br>
